--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:minSdkVersion="8" />
 
     <application
         android:allowBackup="true"
@@ -23,16 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             
-		<!-- 애드립 init activity -->
-		<intent-filter>
-			<action android:name="android.intent.action.VIEW"/>
-			<category android:name="android.intent.category.DEFAULT"/>
-			<category android:name="android.intent.category.BROWSABLE"/>
-		
-			<!-- rat:// --> 
-			<data android:scheme="rat"/>	
-		</intent-filter>
-		<!-- 애드립 init activity -->
+			<!-- 애드립 init activity -->
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+			
+				<!-- rat:// --> 
+				<data android:scheme="rat"/>	
+			</intent-filter>
+			<!-- 애드립 init activity -->
 
         </activity>
         
