--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,11 @@
 
     <uses-sdk
         android:minSdkVersion="8" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -29,7 +34,7 @@
 				<category android:name="android.intent.category.BROWSABLE"/>
 			
 				<!-- rat:// --> 
-				<data android:scheme="rat"/>	
+				<data android:scheme="INSERT_YOUR_CUSTOM_SCHEME_NAME"/>	
 			</intent-filter>
 			<!-- 애드립 init activity -->
 
@@ -41,14 +46,9 @@
 		      <action android:name="com.android.vending.INSTALL_REFERRER" />
 		  </intent-filter>
 		</receiver>
-		<meta-data android:name="ADLIB_RAT_KEY" android:value="5193433be4b00e029838d601" />
+		<meta-data android:name="ADLIB_RAT_KEY" android:value="INSERT_YOUR_ADLIB_RAT_KEY" />
 		<!-- 애드립 RAT 필수구현 -->
         
     </application>
-    
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 </manifest>
