--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-            
+        
+        <!-- 구글 광고 ID 사용을 위해 꼭 추가해주세요. -->
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         
         <activity
             android:name="com.mocoplex.rat.sample.MainActivity"
@@ -48,8 +50,6 @@
 		</receiver>
 		
 		<meta-data android:name="ADLIB_RAT_KEY" android:value="INSERT_YOUR_ADLIB_RAT_KEY" />
-		
-		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<!-- 애드립 RAT 필수구현 -->
         
     </application>
